--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-are you a idiot or something
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bro</title>
+</head>
+<body>
+    <h1>Bro are you a idiot or something</h1>
+    <h1 id="e"></h1>
+</body>
+</html>
